# star_track

./: .gitmodules  CMakeLists.txt
src/: adjacency_list.hpp  candidate_source.cpp  candidate_source.hpp  main.cpp  star_catalog.cpp  star_catalog.hpp
tests/: main.cpp
